# Text-Suggester-ChatBot

./: AutoCompleteEngine.cpp  AutoCompleteEngine.h  CMakeLists.txt  CMakeSettings.json  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  build.bat  build.ps1  main_console.cpp  main_gui.cpp
src/gui/: GUIInterface.cpp
tests/: property_tests.cpp  unit_tests.cpp
